test_suite5/ALAN/test_suite/alan-2022-examples/failing/002960_mutation.alan
source b674a begin if 313 begin relax end then relax end end
